<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TeamateApplication</string>

    <string name="teamate_title">TEAMATE</string>

    <string name="teamate_subtitle">Tocca per continuare</string>

    <string name="string_home_title">HOME</string>

    <string name="string_statistics_title">STATISTICHE</string>

    <string name="string_favourites_title">PREFERITI</string>

    <string name="string_settings_title">IMPOSTAZIONI</string>

    <string name="string_home">Home</string>

    <string name="string_statistics">Statistiche</string>

    <string name="string_favourites">Preferiti</string>

    <string name="string_settings">Impostazioni</string>

    <string name="string_title_scrollView">Breaking news</string>

    <string name="string_text_scrollView">Sarà Jannik Sinner contro Carlos Alcaraz la finale per il primo posto al Six Kings Slam, mentre Novak Djokovic sfiderà Rafa Nadal nella finale per il terzo posto, in programma entrambe sabato 19 ottobre</string>

    <string name="string_placeholder_editText_search">cerca il tuo tennista</string>

    //posse

    <string name="title">Teamate</string>

    <string name="titlelogin">Accedi</string>

    <string name="button_one">Continua con telefono/email/username</string>

    <string name="button_apple">Continua con Apple</string>

    <string name="button_facebook">Continua con Facebook</string>

    <string name="button_google">Continua con Google</string>

    <string name="last_title">Non hai un account?</string>

    <string name="last_registrati">Registrati</string>

    <string name="enter">Inserisci telefono, email o username</string>

    <string name="password">Inserisci la password</string>

    <string name="back">INDIETRO</string>

    <string name="login">ACCEDI</string>

    <string name="enter_apple">Inserisci il tuo Id Apple</string>

    <string name="enter_google">Inserisci la tua email di Google</string>

    <string name="enter_facebook">Inserisci la tua email di Facebook</string>

    <string name="registrati">Registrazione</string>

    <string name="enter_user">Inserisci username</string>

    <string name="enter_email">Inserisci email</string>

    <string name="enter_pass">Inserisci password</string>

    <string name="button_notifiche">Notifiche</string>

    <string name="button_account">Account</string>

    <string name="button_elimina">Elimina Account</string>

    <string name="button_sinner">1. JANNIK SINNER</string>

    <string name="button_zverev">2. ALEXANDER ZVEREV</string>

    <string name="button_alcaraz">3. CARLOS ALCARAZ</string>

    <string name="button_fritz">4. TAYLOR FRITZ</string>

    <string name="button_medvedev">5. DANIIL MEDVEDEV</string>

    <string name="button_changeuser">Cambia username</string>

    <string name="button_changepss">Cambia password</string>

    <string name="old_password">Inserisci la vecchia password</string>

    <string name="new_password">Inserisci password</string>

    <string name="old_username">Inserisci il vecchio username</string>

    <string name="new_username">Inserisci il nuovo username</string>

    <string name="title_not">Notifiche</string>

    <string name="mostra_notifiche">Mostra notifiche</string>

    <string name="inizio_notifiche">Notifiche inizio match</string>

    <string name="fine_notifiche">Notifiche fine match</string>

    <string name="fine_set">Notifiche fine set</string>

    <string name="suono_notifiche">Suono</string>

    <string name="vibra_notifiche">Vibrazione</string>

    <string name="Sinner_">Jannik Sinner</string>

    <string name="Utente">Username</string>

    <string name="Email">Email</string>

    <string name="Info_player">Informazioni giocatore</string>

    <string name="Stat_player">Statistiche giocatore</string>

    <string name="Stat_Carri">Statistiche carriera</string>

    <string name="News">Ultime news</string>

    <string name="Hard">Cemento</string>

    <string name="Grass">Erba</string>

    <string name="Clay">Terra rossa</string>

    <string name="ViewPassword">Password</string>

    <string name="change_mail">Cambia Email</string>

    <string name="button_change_mail">Cambia email</string>

    <string name="old_email">Inserisci  email</string>

    <string name="new_email">Inserisci la nuova email</string>

    <string name="button_esci">Esci dall account</string>

    <string name="first_fragment_label">First Fragment</string>

    <string name="second_fragment_label">Second Fragment</string>

    <string name="username_placeholder">Inserisci qui il nome utente</string>

    <string name="password_placeholder">Inserisci qui la password</string>

    <string name="login_button_label">Login</string>

    <string name="login_error_message">Compilare tutti i campi</string>

    <string name="login_notmatch_error">Il nome utente  o la password non sono corretti</string>



</resources>