<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statistics_career"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsCareerFragment"
    android:background="@color/medium_high_blue">

    <Button
        android:id="@+id/hard_court_button"
        style="@style/CustomTextViewSurface"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="55sp"
        android:layout_marginTop="50sp"
        android:text="@string/Hard"
        android:backgroundTint="@color/dark_blue"/>

    <Button
        android:id="@+id/grass_court_button"
        style="@style/CustomTextViewSurface"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="55sp"
        android:layout_marginTop="150sp"
        android:text="@string/Grass"
        android:backgroundTint="@color/green"/>

    <Button
        android:id="@+id/clay_court_button"
        style="@style/CustomTextViewSurface"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="55sp"
        android:layout_marginTop="250sp"
        android:text="@string/Clay"
        android:backgroundTint="@color/orange"/>

</FrameLayout>

