<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/last_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LastNewsFragment"
    android:background="@color/medium_high_blue">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_player_informations"
        style="@style/CustomTitlePlayerInformations"
        android:layout_width="374sp"
        android:layout_height="75sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="20sp"
        android:background="@color/dark_blue"/>

    <ImageView
        android:id="@+id/SinnerImg"
        style="@style/SinnerImg"
        android:layout_width="120sp"
        android:layout_height="100sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="160sp"/>

    <Button
        android:id="@+id/info_"
        style="@style/Informazioni_"
        android:text="@string/Info_player"
        android:layout_width="120sp"
        android:layout_height="80sp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="135dp"/>

    <Button
        android:id="@+id/stat_"
        style="@style/Informazioni_"
        android:text="@string/Stat_player"
        android:layout_width="120sp"
        android:layout_height="80sp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="135dp"/>

    <Button
        android:id="@+id/carriera_"
        style="@style/Informazioni_"
        android:text="@string/Stat_Carri"
        android:layout_width="120sp"
        android:layout_height="80sp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="225dp" />

    <Button
        android:id="@+id/news_"
        style="@style/Informazioni2_"
        android:text="@string/News"
        android:layout_width="120sp"
        android:layout_height="80sp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="225dp" />

    <ScrollView
        android:layout_width="350sp"
        android:layout_height="300sp"
        android:background="@color/white"
        android:layout_marginTop="325sp"
        android:layout_marginStart="30dp"/>


    <TextView
        android:id="@+id/textView_menu_bottom"
        style="@style/CustomLayoutMenuBottom"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="650sp"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/imageButton_home"
        style="@style/CustomHomeImageWhite"
        android:layout_width="37sp"
        android:layout_height="37sp"
        android:layout_marginStart="40sp"
        android:layout_marginTop="661sp"/>

    <ImageButton
        android:id="@+id/imageButton_favourites"
        style="@style/CustomStarImageWhite"
        android:layout_width="37sp"
        android:layout_height="37sp"
        android:layout_marginStart="187sp"
        android:layout_marginTop="661sp" />

    <ImageButton
        android:id="@+id/imageButton_settings"
        style="@style/CustomSettingsImageWhite"
        android:layout_width="37sp"
        android:layout_height="37sp"
        android:layout_marginStart="330sp"
        android:layout_marginTop="661sp" />

</FrameLayout>



